# llm-web

./: Dockerfile  README.md  app.py  gunicorn.conf.py  models.yaml  pyproject.toml  requirements.txt  server.sh  test.py
.github/workflows/: docker-image.yml  publish.yaml
generator/: __init__.py  base.py  bloom.py  config.py  factory.py
static/: main.js  style.css
templates/: index.html
